	- added ticalcs_probe for Kevin and I. This function is complete because it handles 
		all of the probing (open/close handle, probe for all/FLASH only devices).
	- fixed TI-73 ROM dumps (untested, but the previous code definitely didn't work) (kevin)
	- fixed _FORTIFY_SOURCE and strict-aliasing warnings (kevin)
	- fixed warnings and bugs in the test program (kevin)

- 07/07/2006, version 0.2.3: roms
	- refresh total counter (cnt3) when sending TiGroup file
	- begins count at 1 instead of 0 (cnt3)
	- fixed filename translation in TiGroup support
	- for now, use this naming scheme for TI9x var filenames: folder.var.extension (as tifiles2).
	- look for the correct module file name on MinGW in ticalcs_library_init (kevin)

- 16/06/2006, version 0.2.2: roms
	- added full backup capability thru TiGroup files

- 11/06/2006, version 0.2.1: roms
	- reworked/added field in CalcUpdate structure (API compat broken here, again) 
	- added field in the CalcFncts structure which tells which counter may be used for refresh
	- checked/fixed all pbar counters
	- fixed typo (waiting -> waiting for)
	- some calcs needs 2P1L refresh for ROM dumper
	- some varname<->utf conversions were missing
	- adapt refresh of cnt1 depending on the link cable transfer capability
	- reset cnt2 value at transfer startup (needed and missing)

- 08/06/2006, version 0.2.0: roms
	- reworked dirlist API (API compat broken here)
	- changed FLASH app dirlist format to be the same as var one
	- don't count archived (=FLASH) variables in ticalcs_dirlist_ram_used
	- updated 68k ROM dumpers to dump 8 MB on HW4 and rebuilt them with the latest CVS TIGCC (GCC 4.1.1, reduces size) (kevin)

- 05/06/2006, version 0.1.5: roms
	- added stdints3.h header
	- increased verbosity of USB commands layer
	- re-enabled TI84+ OS sending
	
- 31/05/2006, version 0.1.4: roms
	- don't export ticalcs_probe_calc_1/2 any longer because they can't 
	be used easily outside of the library