@@ -99,4 +99,4 @@ static unsigned char romDump73[] = {
 0x66, 0x20, 0x35, 0x31, 0x32, 0x4b, 0x00, 0x00, 
 0x08, 0x00, 0xdc, 0x1a, 
 };
-static int romDumpSize73 = 788;
+static unsigned int romDumpSize73 = 788;
