@@ -105,4 +105,4 @@ static unsigned char romDump82[] = {
 0x30, 0x4b, 0x20, 0x6f, 0x66, 0x20, 0x31, 0x32, 
 0x38, 0x4b, 0x00, 0x00, 0x02, 0x00, 0xcb, 0x2f, 
 };
-static int romDumpSize82 = 840;
+static unsigned int romDumpSize82 = 840;
