@@ -191,4 +191,4 @@ static unsigned char romDump83[] = {
 0x30, 0x30, 0x3f, 0xd4, 0x3f, 0x30, 0x30, 0x30, 
 0x30, 0x3f, 0xd4, 0x9e, 0x44, 
 };
-static int romDumpSize83 = 1525;
+static unsigned int romDumpSize83 = 1525;
