@@ -179,4 +179,4 @@ static unsigned char romDump89[] = {
 0x50,0x8f,0x58,0x4f,0x4e,0x75,0x00,0x00,0x01,0x32,
 0x02,0x92,0x05,0x26,0x02,0x40,0xf3,0xe7,0xd5
 };
-static int romDumpSize89 = 1789;
+static unsigned int romDumpSize89 = 1789;
